--- a/restaurant.html
+++ b/restaurant.html
@@ -111,7 +111,7 @@
                     <!-- tools -->
                     <ul class="tools">
                         <li>
-                            <a class="saved">
+                            <a class="btn_save">
                                 <svg class="ui_icon ui_icon_svg save">
                                     <use xlink:href="#icon_save"></use>
                                 </svg>
@@ -121,7 +121,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="share">
+                            <a class="btn_sharebox" data-url="http://www.carimakan.id/shop/index/info/id/TEFhMlhKVklXUlZRblRBR1d5WXYzQT09.html" data-title="Moksh Restaurant & Lounge">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_share"></use>
                                 </svg>
@@ -209,7 +209,7 @@
                                 <!-- img -->
                                 <div class="img">
                                     <!-- img size: 250 * 250 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_viewpic" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                                 </div>
                                 <!--/ end img -->
                             </div>
@@ -219,14 +219,14 @@
                                 <!-- img -->
                                 <div class="img">
                                     <!-- img size: 124 * 124 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_viewpic" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                                 </div>
                                 <!--/ end img -->
 
                                 <!-- img -->
                                 <div class="img">
                                     <!-- img size: 124 * 124 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_viewpic" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
 
                                     <!-- more -->
                                     <a href="/photos.html" class="more">
@@ -759,7 +759,7 @@
     <!-- script js -->
     <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
+    <!-- <script type="text/javascript" src="/js/lib/OMIS.js"></script> -->
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
     <!--/ end layout js -->
