--- a/_commentslist.html
+++ b/_commentslist.html
@@ -75,12 +75,12 @@
             <!-- footer -->
             <div class="footer">
                 <ul class="list">
-                    <li class="btn_like">
+                    <li class="btn_action" data-ctype="like">
                         <svg class="ui_icon ui_icon_svg like">
                             <use xlink:href="#icon_like"></use>
                         </svg>
                         <span>
-                            Like
+                            0 Like
                         </span>
                     </li>
                     <li class="btn_comment">
@@ -186,7 +186,7 @@
             <!-- footer -->
             <div class="footer">
                 <ul class="list">
-                    <li>
+                    <li class="btn_action" data-ctype="like">
                         <svg class="ui_icon ui_icon_svg like cur">
                             <use xlink:href="#icon_like"></use>
                         </svg>
