--- a/_filter.html
+++ b/_filter.html
@@ -5,90 +5,167 @@
         <!-- list  -->
         <ul class="list">
             <!-- Area -->
-            <li>
+            <li class="filter_nav">
                 <!-- title -->
                 <h2 class="title triangles">Area</h2>
                 <!--/ end title -->
                 <!-- content -->
-                <div class="content">
-                    content
+                <div class="content nav">
+                    <!-- main -->
+                    <div class="main">
+                        <!-- list first -->
+                        <ul class="list first selected">
+                            <!-- loop list -->
+                            <li class="active">
+                                <!-- title -->
+                                <h3 class="title">
+                                    <svg class="ui_icon ui_icon_svg">
+                                        <use xlink:href="#icon_hotarea"></use>
+                                    </svg>
+                                    <span>
+                                        Hot Area
+                                    </span>
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    <svg class="ui_icon ui_icon_svg">
+                                        <use xlink:href="#icon_landmark"></use>
+                                    </svg>
+                                    <span>
+                                        Landmark
+                                    </span>
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                        </ul>
+                        <!--/ end list first -->
+
+                        <!-- list second -->
+                        <ul class="list second cur">
+                            <!-- loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    All
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                            <li class="active">
+                                <!-- title -->
+                                <h3 class="title">
+                                    Chinese Food
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Seafood
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                        </ul>
+                        <!--/ end list second -->
+
+                        <!-- list third -->
+                        <ul class="list third active">
+                            <!-- loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Makanan Berat
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                        </ul>
+                        <!--/ end list third -->
+                    </div>
+                    <!--/ end main -->
                 </div>
                 <!--/ end content -->
             </li>
             <!--/ end Area -->
 
             <!-- Category -->
-            <li class="cur">
+            <li class="filter_nav">
                 <!-- title -->
                 <h2 class="title triangles">Category</h2>
                 <!--/ end title -->
 
                 <!-- content -->
                 <div class="content nav">
-                    <!-- list -->
-                    <ul class="list">
-                        <!-- loop list -->
-                        <li>
-                            <!-- title -->
-                            <h3 class="title">
-                                Makanan Berat
-                            </h3>
-                            <!--/ end title -->
+                    <!-- main -->
+                    <div class="main">
+                        <!-- list first -->
+                        <ul class="list first cur">
+                            <!-- loop list -->
+                            <li class="active">
+                                <!-- title -->
+                                <h3 class="title">
+                                    Makanan Berat
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Jajanan
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Atmosphere
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                        </ul>
+                        <!--/ end list first -->
 
-                            <!-- sub_list -->
-                            <ul class="sub_list">
-                                <!-- loop list -->
-                                <li>
-                                    <h3 class="title">
-                                        Chinese Food
-                                    </h3>
-
-                                    <!-- sub_list -->
-                                    <ul class="sub_list">
-                                        <!-- loop list -->
-                                        <li>
-                                            <h3 class="title">
-                                                Chinese Food
-                                            </h3>
-                                        </li>
-                                        <!--/ end loop list -->
-                                        <li>
-                                            <h3 class="title">
-                                                Chinese Food
-                                            </h3>
-                                        </li>
-                                        <li>
-                                            <h3 class="title">
-                                                Chinese Food
-                                            </h3>
-                                        </li>
-                                    </ul>
-                                    <!--/ end sub_list -->
-                                </li>
-                                <!--/ end loop list -->
-                                <li>
-                                    <h3 class="title">
-                                        Chinese Food
-                                    </h3>
-                                </li>
-                                <li>
-                                    <h3 class="title">
-                                        Chinese Food
-                                    </h3>
-                                </li>
-                            </ul>
-                            <!--/ end sub_list -->
-                        </li>
-                        <!--/ end loop list -->
-                    </ul>
-                    <!--/ end list -->
+                        <!-- list second -->
+                        <ul class="list second active">
+                            <!-- loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    All
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Chinese Food
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    Seafood
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                        </ul>
+                        <!--/ end list second -->
+                    </div>
+                    <!--/ end main -->
                 </div>
                 <!--/ end content -->
             </li>
             <!--/ end Category -->
 
             <!-- Sort -->
-            <li>
+            <li class="filter_nav">
                 <!-- title -->
                 <h2 class="title triangles">Sort</h2>
                 <!--/ end title -->
@@ -145,7 +222,7 @@
             <!--/ end Sort -->
 
             <!-- Filter -->
-            <li>
+            <li class="filter_nav">
                 <!-- title -->
                 <h2 class="title">
                     <svg class="ui_icon ui_icon_svg">
