--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <!--/ end banner -->
 
                 <!-- main -->
-                <section class="main">
+                <section class="main scrollfix">
                     <!-- city -->
                     <div class="city btn_getCity">
                         Jakarta
