--- a/restaurant.html
+++ b/restaurant.html
@@ -111,11 +111,8 @@
                     <!-- tools -->
                     <ul class="tools">
                         <li>
-                            <a class="btn_save">
+                            <a class="btn_action" data-ctype="save">
                                 <svg class="ui_icon ui_icon_svg save">
-                                    <use xlink:href="#icon_save"></use>
-                                </svg>
-                                <svg class="ui_icon ui_icon_svg save cur">
                                     <use xlink:href="#icon_save"></use>
                                 </svg>
                             </a>
@@ -250,7 +247,7 @@
                                     Foto belum tersedia,
                                     Jadilah yang pertama!
                                 </p>
-                                <a class="ui_btn btn2">
+                                <a class="ui_btn btn2 btn_getAppsDialog">
                                     Unggah Foto
                                 </a>
                             </div>
@@ -306,7 +303,7 @@
                             <!-- phone -->
                             <!-- viewinfo -->
                             <li class="viewinfo">
-                                <a class="btn_go" data-type="information">
+                                <a class="btn_goTo" data-obj=".information">
                                     <div class="txt">
                                         <svg class="ui_icon ui_icon_svg">
                                             <use xlink:href="#icon_shop"></use>
@@ -420,7 +417,7 @@
                         <p>
                             Pernah Makan Di Tempat Ini? Yuk, Tulis Ulasanmu!
                         </p>
-                        <a class="ui_btn btn2">
+                        <a class="ui_btn btn2 btn_getAppsDialog">
                             Write a Review
                         </a>
                     </div>
@@ -516,7 +513,7 @@
                                     <!-- loop list -->
                                     <li>
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_creditcard"></use>
+                                            <use xlink:href="#icon_credit-card"></use>
                                         </svg>
                                         <span>
                                             Credit Card
@@ -581,7 +578,7 @@
                                     </li>
                                     <li>
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_motorparking"></use>
+                                            <use xlink:href="#icon_motor-parking"></use>
                                         </svg>
                                         <span>
                                             Motorcycle parking
@@ -589,7 +586,7 @@
                                     </li>
                                     <li>
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_carparking"></use>
+                                            <use xlink:href="#icon_car-parking"></use>
                                         </svg>
                                         <span>
                                             Car parking
