--- a/_common_jsTpl.html
+++ b/_common_jsTpl.html
@@ -191,4 +191,73 @@
 </script>
 <!-- /end tpl_shareBox -->
 
+
+<!-- tpl_search -->
+<script id="tpl_search" type="text/x-jsrender">
+    <!-- searchbox -->
+    <section class="searchbox">
+        <!-- header -->
+        <header class="header">
+            <div class="ui_text ui_text_group icon">
+                <input class="input" type="text" name="" value="" placeholder="Search">
+                <svg class="ui_icon ui_icon_svg">
+                    <use xlink:href="#icon_search"></use>
+                </svg>
+                <a class="clear">
+                    <svg class="ui_icon ui_icon_svg">
+                        <use xlink:href="#icon_close"></use>
+                    </svg>
+                </a>
+            </div>
+            <a class="close dialog_close">
+                CANCEL
+            </a>
+        </header>
+        <!--/ end header -->
+
+        <!-- content -->
+        <div class="content ui_block">
+            <h3 class="title">Hot Search</h3>
+            <div class="content">
+                <ul class="list">
+                    <!-- loop list -->
+                    <li>
+                        <a>
+                            Hotpot
+                        </a>
+                    </li>
+                    <!--/ end loop list -->
+                </ul>
+            </div>
+        </div>
+        <!-- content -->
+
+        <!-- footer -->
+        <div class="footer ui_block">
+            <h3 class="title">
+                <span class="txt">
+                    Recent Search
+                </span>
+                <a class="clear">
+                    Clear the record
+                </a>
+            </h3>
+            <div class="content">
+                <ul class="list">
+                    <!-- loop list -->
+                    <li>
+                        <a>
+                            Hotpot
+                        </a>
+                    </li>
+                    <!--/ end loop list -->
+                </ul>
+            </div>
+        </div>
+        <!-- footer -->
+    </section>
+    <!--/ end searchbox -->
+</script>
+<!-- /end tpl_search -->
+
 <!--/ end tpl -->
