--- a/_filter.html
+++ b/_filter.html
@@ -14,15 +14,15 @@
                     <!-- main -->
                     <div class="main">
                         <!-- list first -->
-                        <ul class="list first selected">
+                        <ul class="list first">
                             <!-- loop list -->
-                            <li class="active">
+                            <li class="cur">
                                 <!-- title -->
                                 <h3 class="title">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_hotarea"></use>
                                     </svg>
-                                    <span>
+                                    <span class="txt">
                                         Hot Area
                                     </span>
                                 </h3>
@@ -35,7 +35,7 @@
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_landmark"></use>
                                     </svg>
-                                    <span>
+                                    <span class="txt">
                                         Landmark
                                     </span>
                                 </h3>
@@ -45,27 +45,54 @@
                         <!--/ end list first -->
 
                         <!-- list second -->
-                        <ul class="list second cur">
+                        <ul class="list second">
                             <!-- loop list -->
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    All
+                                    <span class="txt">All</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
                             <!--/ end loop list -->
-                            <li class="active">
+                            <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Chinese Food
+                                    <span class="txt">Chinese Food</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Seafood
+                                    <span class="txt">Seafood</span>
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                        </ul>
+                        <!--/ end list second -->
+                        <!-- list second -->
+                        <ul class="list second">
+                            <!-- loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    <span class="txt">All</span>
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <!--/ end loop list -->
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    <span class="txt">Chinese Food2</span>
+                                </h3>
+                                <!--/ end title -->
+                            </li>
+                            <li>
+                                <!-- title -->
+                                <h3 class="title">
+                                    <span class="txt">Seafood3</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -73,12 +100,15 @@
                         <!--/ end list second -->
 
                         <!-- list third -->
-                        <ul class="list third active">
+                        <ul class="list third">
                             <!-- loop list -->
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Makanan Berat
+                                    <svg class="ui_icon ui_icon_svg icon_check">
+                                        <use xlink:href="#icon_check"></use>
+                                    </svg>
+                                    <span class="txt">Makanan Berat</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -108,7 +138,7 @@
                             <li class="active">
                                 <!-- title -->
                                 <h3 class="title">
-                                    Makanan Berat
+                                    <span class="txt">Makanan Berat</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -116,14 +146,14 @@
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Jajanan
+                                    <span class="txt">Jajanan</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Atmosphere
+                                    <span class="txt">Atmosphere</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -136,7 +166,10 @@
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    All
+                                    <svg class="ui_icon ui_icon_svg icon_check">
+                                        <use xlink:href="#icon_check"></use>
+                                    </svg>
+                                    <span class="txt">All</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -144,14 +177,20 @@
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Chinese Food
+                                    <svg class="ui_icon ui_icon_svg icon_check">
+                                        <use xlink:href="#icon_check"></use>
+                                    </svg>
+                                    <span class="txt">Chinese Food</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
                             <li>
                                 <!-- title -->
                                 <h3 class="title">
-                                    Seafood
+                                    <svg class="ui_icon ui_icon_svg icon_check">
+                                        <use xlink:href="#icon_check"></use>
+                                    </svg>
+                                    <span class="txt">Seafood</span>
                                 </h3>
                                 <!--/ end title -->
                             </li>
@@ -261,7 +300,7 @@
                                     <input class="checkbox" value="" type="checkbox" name="">
                                     <span class="magin_icon">
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_creditcard"></use>
+                                            <use xlink:href="#icon_credit-card"></use>
                                         </svg>
                                         <span>
                                             Credit Card
@@ -272,7 +311,7 @@
                                     <input class="checkbox" value="" type="checkbox" name="">
                                     <span class="magin_icon">
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_carparking"></use>
+                                            <use xlink:href="#icon_car-parking"></use>
                                         </svg>
                                         <span>
                                             Car parking
