--- a/_shoplist.html
+++ b/_shoplist.html
@@ -1,5 +1,5 @@
 <!-- ui_shoplist -->
-<ul class="ui_shoplist">
+<ul class="ui_shoplist ui_list">
     <!-- loop list -->
     <li>
         <a href="/restaurant.html">
