--- a/_voucherlist.html
+++ b/_voucherlist.html
@@ -1,5 +1,5 @@
 <!-- ui_voucherlist -->
-<ul class="ui_voucherlist">
+<ul class="ui_voucherlist ui_list">
     <!-- loop list -->
     <li>
         <a href="/voucher.html">
