--- a/maps.html
+++ b/maps.html
@@ -99,7 +99,7 @@
                     <ul class="tools">
                         <li>
                             <!-- goback -->
-                            <a class="goback">
+                            <a class="goback btn_goblack">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_arrowback"></use>
                                 </svg>
