--- a/profile.html
+++ b/profile.html
@@ -93,12 +93,12 @@
             <!-- container -->
             <div class="container">
                 <!-- nav -->
-                <section class="nav">
+                <section class="nav scrollfix">
                     <!-- tools -->
                     <ul class="tools">
                         <li>
                             <!-- goback -->
-                            <a class="goback">
+                            <a class="goback btn_goblack">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_arrowback"></use>
                                 </svg>
@@ -144,7 +144,7 @@
                     <header class="header">
                         <!-- img -->
                         <div class="img">
-                            <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg">
+                            <img src="/images/placeholder_profile.jpg">
                         </div>
                         <!--/ end img -->
 
@@ -332,7 +332,7 @@
                 <!-- ui_block list -->
                 <section class="ui_block list">
                     <!-- nav -->
-                    <nav class="nav">
+                    <nav class="nav scrollfix">
                         <ul class="list">
                             <!-- loop list -->
                             <li class="cur">
@@ -818,9 +818,9 @@
     <script type="text/javascript" src="/js/com.js"></script>
     <!--/ end layout js -->
 
-    <!-- com js -->
-    <!-- <script type="text/javascript" src="/js/com.js"></script> -->
-    <!--/ end com js -->
+    <!-- profile js -->
+    <script type="text/javascript" src="/js/profile.js"></script>
+    <!--/ end profile js -->
     <!--/ end script js -->
 
 
