--- a/search.html
+++ b/search.html
@@ -94,16 +94,20 @@
             <div class="container">
                 <!-- search -->
                 <section class="search">
-                    <!-- search -->
-                    <div class="search">
-                        <div class="ui_text ui_text_group icon">
-                            <input class="input" type="text" name="" value="" placeholder="Search">
+                    <div class="ui_text ui_text_group icon">
+                        <input class="input" type="text" name="" value="" placeholder="Search">
+                        <svg class="ui_icon ui_icon_svg">
+                            <use xlink:href="#icon_search"></use>
+                        </svg>
+                        <a class="clear">
                             <svg class="ui_icon ui_icon_svg">
-                                <use xlink:href="#icon_search"></use>
+                                <use xlink:href="#icon_close"></use>
                             </svg>
-                        </div>
+                        </a>
                     </div>
-                    <!--/ end search -->
+                    <a class="close dialog_close">
+                        CANCEL
+                    </a>
                 </section>
                 <!--/ end search -->
             </div>
