--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <!-- search -->
                     <div class="search btn_search">
                         <div class="ui_text ui_text_group icon">
-                            <input class="input" type="text" name="" value="" placeholder="Search">
+                            <input class="input" type="text" name="" value="" placeholder="Search" readonly="true">
                             <svg class="ui_icon ui_icon_svg">
                                 <use xlink:href="#icon_search"></use>
                             </svg>
@@ -163,35 +163,11 @@
                 <section class="ui_block postlist">
                     <!-- content  -->
                     <div class="content">
-                        <ul class="ui_postlist">
-                            <!-- loop list -->
-                            <li>
-                                <a href="/post.html">
-                                    <!-- img -->
-                                    <div class="img">
-                                        <!-- img size: 140*90 -->
-                                        <img src="http://p1.meituan.net/apiback/ce43ac7bdeea4ba66080ff8bc28b26cc104528.jpg%40300w_225h_1e_1c_1l%7Cwatermark%3D1%26%26r%3D1%26p%3D9%26x%3D2%26y%3D2%26relative%3D1%26o%3D20" />
-                                    </div>
-                                    <!--/ end img -->
-
-                                    <!-- content -->
-                                    <div class="content">
-                                        <!-- time -->
-                                        <div class="time">
-                                            Nov 07, 2017
-                                        </div>
-                                        <!--/ end time -->
-                                        <!-- title -->
-                                        <h3 class="title">
-                                            Sushi Tei - Lippo Kemang Village Mall
-                                        </h3>
-                                        <!--/ end title -->
-                                    </div>
-                                    <!--/ end content -->
-                                </a>
-                            </li>
-                            <!--/ end loop list -->
-                        </ul>
+                        <!-- 請按實際需要渲染頁面 -->
+                        <!-- postlist -->
+                        <div class="include" file="_postlist.html"></div>
+                        <!--/ end postlist -->
+                        <!--/ end 請按實際需要渲染頁面 -->
                     </div>
                     <!--/ end content -->
                 </section>
