--- a/post.html
+++ b/post.html
@@ -93,12 +93,12 @@
             <!-- container -->
             <div class="container">
                 <!-- nav -->
-                <section class="nav">
+                <section class="nav scrollfix">
                     <!-- tools -->
                     <ul class="tools">
                         <li>
                             <!-- goback -->
-                            <a class="goback">
+                            <a class="goback btn_goblack">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_arrowback"></use>
                                 </svg>
